--- a/node/edit.html
+++ b/node/edit.html
@@ -33,8 +33,8 @@
           <label for="contents">내용</label>
           <textarea
             class="form-control"
-            id="contents"
-            name="contents"
+            id="content"
+            name="content"
             value="<%= data.content%>"
             style="height: 60vh"
           ><%= data.content%>
