--- a/node/list.html
+++ b/node/list.html
@@ -13,7 +13,8 @@
 <body>
 
 <div class="container">
-<h2><a herf="/deletedList/1">삭제된 목록</a></h2>
+<h2>글 목록</h2>
+<a herf="/deletedList/1">삭제된 목록</a>
 
 <a href="/insert">글쓰기</a>
 <br>
