--- a/node/deleted_list.html
+++ b/node/deleted_list.html
@@ -14,7 +14,7 @@
 
 <div class="container">
 <h2>삭제된 목록</h2>
-<a herf="/list/1">글 목록</a>
+<a href="/list/1">글 목록</a>
 
 <a href="/insert">글쓰기</a>
 <br>
